--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>pl.skrzynski.creditcard</groupId>
-    <artifactId>credit-card-app</artifactId>
+    <groupId>pl.jkanclerz.creditcard</groupId>
+    <artifactId>caredit-card-app</artifactId>
     <version>0.1</version>
 
     <parent>
